##Text encoding: utf-8

2010-02-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/group.cc: allow better selection.
	* libs/gccv/leaf.cc: partially implemented Leaf::Distance().
	* libs/gcp/atom.cc: fix some children related issues.
	* libs/gcp/electron.cc: set the client for all items.
	* plugins/paint/atoms/orbital.cc: implement Orbital::SetSelected().

2010-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fixed custom charge position dieplay.
	* plugins/paint/atoms/orbital.cc: update copyright.
	* plugins/paint/atoms/orbital.h: ditto.
	* plugins/paint/atoms/orbitaltool.cc: implement preview.
	* plugins/paint/atoms/orbitaltool.h: ditto.

2010-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/leaf.cc: fixed size to something more logical.
	* plugins/paint/atoms/orbital.cc: implement d orbitals and orbital rotation.
	* plugins/paint/atoms/orbital.h: ditto.
	* plugins/paint/atoms/orbital.ui: ditto.
	* plugins/paint/atoms/orbitaltool.cc: ditto.
	* plugins/paint/atoms/orbitaltool.h: ditto.

2010-02-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: delete lemniscate, add leaf.
	* libs/gccv/leaf.cc: new file.
	* libs/gccv/leaf.h: ditto.
	* libs/gccv/lemniscate.cc: deleted.
	* libs/gccv/lemniscate.h: ditto.
	* plugins/paint/atoms/orbital.cc: add support for p type atomic orbitals.
	* plugins/paint/atoms/orbitaltool.cc: ditto.
	* programs/calc/gchemcalc.cc: fixed icon name.

2010-02-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/view.cc: cleaned out deprecated and commented out code.
	* mozilla-plugin/chem-viewer.cc: fixed issues with chemdraw files support.
	* mozilla-plugin/moz-plugin.c: ditto.

2010-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/view.cc: better fix for high resolution bitmaps.
	* libs/gcu/crystaldoc.cc: do not use a NULL space group.
	* plugins/loaders/cif/cif.cc: fixed reading invalid loops and support
	unkown space groups.
